# fractal_compressor

./: .gitignore  README.md  fractal-compression.ipynb  fractal-compression.py  pyproject.toml  requirements.txt
images/: video2gif.sh
