[tool.poetry]
name = "fractal_task"
version = "0.1.0"
description = ""
authors = ["egorchistov <egorchistov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "1.0.0"
numpy = "1.19.1"
matplotlib = "3.3.1"
scikit-image = "0.16.2"
tqdm = "^4.50.2"

[tool.poetry.dev-dependencies]
nbdime = "^2.1.0"
jupyterlab = "^2.2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
